# matrix-bridge

./: .dockerignore  .gitignore  Cargo.toml  Cranky.toml  Dockerfile  Dockerfile.local  LICENSE  README.md  README.zh.md  config.toml  deny.toml  justfile  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml  docker.yml  release.yml
crates/appservice/: Cargo.toml
crates/appservice/src/: auth.rs  bridge_api.rs  crypto_manager.rs  crypto_pool.rs  dispatcher.rs  dns_resolver.rs  lib.rs  matrix_client.rs  puppet_manager.rs  server.rs  webhook_platform.rs  ws.rs
crates/appservice/src/bridge_api/: admin_handlers.rs  message_handlers.rs  mod.rs  room_handlers.rs  space_handlers.rs  tests.rs  types.rs  validation.rs  webhook_handlers.rs
crates/appservice/src/crypto_manager/: bootstrap.rs  decrypt.rs  encrypt.rs  keys.rs  mod.rs  sync.rs
crates/appservice/src/crypto_pool/: mod.rs  pool_ops.rs
crates/appservice/src/dispatcher/: attachment_crypto.rs  bot_commands.rs  commands.rs  crypto_helpers.rs  matrix_content.rs  matrix_events.rs  media_proxy.rs  mod.rs  outbound.rs  platform_events.rs
crates/appservice/src/matrix_client/: crypto.rs  media.rs  messaging.rs  mod.rs  puppets.rs  rooms.rs  spaces.rs
crates/appservice/src/server/: homeserver.rs  mod.rs  transaction.rs
crates/appservice/src/ws/: handler.rs  mod.rs  registry.rs  tests.rs
crates/bridge-telegram/: Cargo.toml
crates/bridge-telegram/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  lib.rs  message.rs  platform.rs  registration.rs
crates/store/: Cargo.toml
crates/store/src/: db.rs  lib.rs  message_mapping.rs  puppet_store.rs  room_mapping.rs  space_store.rs  webhook_store.rs
crates/store/src/migrations/: 001_initial.sql  002_webhooks.sql  003_message_mapping_multi_platform.sql  004_forward_sources.sql  004_webhook_exclude_sources.sql
docs/: api-reference.md  api-reference.zh.md  architecture.md  architecture.zh.md  audit-report.md  changelog.md  encryption.md  encryption.zh.md  getting-started.md  getting-started.zh.md  integration-guide.md  integration-guide.zh.md
examples/: README.md
examples/bun/: server.ts
examples/bun-chat/: README.md  server.ts
examples/integration-test/: .gitignore  README.md  package.json  tsconfig.json
examples/integration-test/src/: bridge-client.ts  config.ts  matrix-test-client.ts  run-tests.ts  setup.ts  test-harness.ts  webhook-server.ts
examples/nodejs/: package.json  webhook_demo.js
examples/python/: webhook_demo.py
examples/webhook/: server.ts
examples/websocket/: client.ts
src/: main.rs
tests/e2e/: 01-health.test.ts  02-room-mapping.test.ts  03-message-bridge.test.ts  04-matrix-to-external.test.ts  05-error-codes.test.ts  06-webhook-exclude.test.ts  07-e2ee-flow.test.ts  08-idempotent-migration.test.ts  09-auto-join.test.ts  10-portal-room.test.ts  11-media-types.test.ts  12-redaction.test.ts  13-multi-platform.test.ts  14-bridge-commands.test.ts  15-webhook-resilience.test.ts  16-concurrent-messages.test.ts  17-edge-cases.test.ts  18-webhook-multiple.test.ts  19-user-level-whitelist.test.ts  README.md  env.ts  helpers.ts  package.json
