[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["multipart"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
rusqlite = { version = "0.37", features = ["bundled"] }
ruma = { version = "0.14", features = ["client-api-c", "appservice-api-s", "events", "html"] }
dashmap = "6"
matrix-sdk-crypto = { version = "0.16", features = ["automatic-room-key-forwarding"] }
matrix-sdk-sqlite = { version = "0.16", features = ["crypto-store"] }
subtle = "2"
ulid = "1"
indexmap = "2"

# Internal crates
matrix-bridge-core = { path = "crates/core" }
matrix-bridge-appservice = { path = "crates/appservice" }
matrix-bridge-store = { path = "crates/store" }

[package]
name = "matrix-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "matrix-bridge"
path = "src/main.rs"

[dependencies]
matrix-bridge-core = { workspace = true }
matrix-bridge-appservice = { workspace = true }
matrix-bridge-store = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
ruma = { workspace = true }
indexmap = { workspace = true }
base64 = "0.22"
getrandom = "0.2"
serde_yaml = { workspace = true }
