[package]
name = "matrix-bridge-appservice"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
matrix-bridge-core = { workspace = true }
matrix-bridge-store = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
ruma = { workspace = true }
dashmap = { workspace = true }
urlencoding = "2"
url = "2"
http = "1"
matrix-sdk-common = { workspace = true }
matrix-sdk-crypto = { workspace = true }
matrix-sdk-sqlite = { workspace = true }
subtle = { workspace = true }
ulid = { workspace = true }
indexmap = { workspace = true }
sha2 = { workspace = true }
aes = { workspace = true }
ctr = { workspace = true }
base64 = { workspace = true }
getrandom = "0.2"
futures-util = { workspace = true }
ammonia = "4"
secrecy = "0.10"
tower_governor = "0.8"

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"
