[package]
name = "matrix-bridge-appservice"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
matrix-bridge-core = { workspace = true }
matrix-bridge-store = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
ruma = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
urlencoding = "2"
http = "1"
async-trait = { workspace = true }
matrix-sdk-crypto = { workspace = true }
matrix-sdk-sqlite = { workspace = true }
vodozemac = { workspace = true }
subtle = { workspace = true }
ulid = { workspace = true }
indexmap = { workspace = true }
