[package]
name = "matrix-bridge-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
matrix-bridge-core = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
